# OOP

.github/workflows/: ci.yml
lab1/: CMakeLists.txt  README.md
lab1/.devcontainer/: Dockerfile  devcontainer.json
lab1/.github/workflows/: ci.yml
lab1/src/: main.cpp  vowel_counter.cpp  vowel_counter.h
lab1/tests/: test_vowel_counter.cpp
lab2/: CMakeLists.txt  README.md
lab2/.devcontainer/: Dockerfile  devcontainer.json
lab2/src/: Twelve.cpp  Twelve.h  TwelveExceptions.h  main.cpp
lab2/tests/: test_Twelve.cpp
lab3/: CMakeLists.txt  README.md
lab3/.devcontainer/: Dockerfile  devcontainer.json
lab3/src/: Figure.hpp  MyVector.hpp  MyVector.tpp  Octagon.cpp  Octagon.hpp  Square.cpp  Square.hpp  Triangle.cpp  Triangle.hpp  main.cpp
lab3/tests/: Tests.cpp
lab4/: CMakeLists.txt  README.md
lab4/.devcontainer/: Dockerfile  devcontainer.json
lab4/src/: Array.hpp  Array.tpp  Figure.hpp  Octagon.hpp  Octagon.tpp  Point.hpp  Point.tpp  Square.hpp  Square.tpp  Triangle.hpp  Triangle.tpp  main.cpp
lab4/tests/: Tests.cpp
lab5/: CMakeLists.txt  README.md  build_and_run.sh
lab5/.devcontainer/: Dockerfile  devcontainer.json
lab5/include/: List.hpp  List.tpp  MemoryResource.hpp  Struct.hpp
lab5/src/: Allocators.js  Allocators.wasm  MemoryResource.cpp  interface.html  list.js  main.cpp
lab5/tests/: Tests.cpp
lab6/: CMakeLists.txt  npcs.txt
lab6/backend/: CMakeLists.txt  bindings.cpp
lab6/backend/include/: ConcreteNPCFactory.h  ConsoleObserver.h  CustomGenerator.h  Elf.h  FightVisitor.h  FileObserver.h  NPC.h  NPCFactory.h  NPCManager.h  NPCVisitor.h  Observer.h  Robber.h  Squirrel.h
lab6/backend/src/: ConcreteNPCFactory.cpp  ConsoleObserver.cpp  Elf.cpp  FightVisitor.cpp  FileObserver.cpp  NPCManager.cpp  Robber.cpp  Squirrel.cpp
lab6/backend/tests/: tests.cpp
lab6/frontend/: game_view.py  generate_images.py  main.py
lab6/frontend/controllers/: game_controller.py
lab6/frontend/utils/: constants.py
lab6/logs/: log.txt
